--- a/Projekte 13/index.html
+++ b/Projekte 13/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projekte 13</title>
 </head>
 <body>
-  <script src="script.js"></script>  
+  <script src="script.js"></script> 
+  
+  
 </body>
 </html>
