--- a/Projekte 13/index.html
+++ b/Projekte 13/index.html
@@ -11,7 +11,7 @@
     <script src="script.js"></script> 
   
 <div class="converter">
-<h2>Währungsumrechnung</h2>
+<h2>Währungsumrechner</h2>
 <label for="amount">Betrag (in Euro):</label>
 <input type="number" id="amount" placeholder="Betrag eingeben">
 <label for="currency">Zielwährung:</label>
