--- a/Projekte 13/index.html
+++ b/Projekte 13/index.html
@@ -44,6 +44,15 @@
             } else if (currency === "CHF") {
 
                 rate = 0.95; // Beispiel: 1 Euro = 0.95 CHF
+            
+            }else if (currency === "YEN")
+
+                rate = 160,89; // Beispiel: 1 Euro = 160,89 YEN
+
+            }else if (currency === "AR PESO")
+
+                rate = 1055,86; // Beispiel: 1 Euro = 1055,86 AR PESO
+
 
             }
 
