--- a/Projekte 13/index.html
+++ b/Projekte 13/index.html
@@ -19,6 +19,8 @@
 <option value="USD">US-Dollar</option>
 <option value="GBP">Britisches Pfund</option>
 <option value="CHF">Schweizer Franken</option>
+<option value="YEN">YEN</option>
+<option value="AR PESO">Argentinischer Peso</option>
 </select>
 <button onclick="convertCurrency()">Umrechnen</button>
 <div class="result" id="result"></div>
